--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id="peepee" class="tabcontent">
         <button class="TabButton" onclick="this.parentElement.style.display='none'">Close</button>
         <br><h3>You can Contact me at any of the folloing socials</h3>
-        <a class="button" href="https://www.youtube.com/channel/UCjdnNGjmRayrvEr5NcJfAYQ" target="_blank">Check out my Youtube channel</a>
+        <a class="button" href="https://www.youtube.com/channel/UCjdnNGjmRayrvEr5NcJfAYQ" target="_blank">Comming soon</a>
       </div>
       
       <div id="Pog" class="tabcontent">
@@ -29,7 +29,7 @@
       <div id="Donate" class="tabcontent">
         <button class="TabButton" onclick="this.parentElement.style.display='none'">Close</button>
         <br><h3>you dont have but if you want to you can Donate</h3>
-        <a class="button" href="https://discord.gg/swycUzdd" target="_blank">Join the discord here</a>
+        <a class="button" href="https://discord.gg/swycUzdd" target="_blank">Donations not yet set up</a>
       </div>
 
       <div id="Discord" class="tabcontent">
