--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
         border: none;
         background-color: none;
         position: absolute;
-        right: 10;
-        top: 10;
+        left: 10;
+        top: 30;
     }
 
 
