--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <div id="Discord" class="tabcontent">
         <button class="TabButton" onclick="this.parentElement.style.display='none'">Close</button>
-        <h2></h2>
+        <br><h2>join the discord to get more frequent updates on the game and get to hang out with the communitey</h2>
         <a class="button" href="https://discord.gg/swycUzdd" target="_blank">Join the discord here</a>
       </div>
 
@@ -96,7 +96,7 @@
         background-color: rgb(124, 124, 124);
         border: 2px solid rgb(0, 0, 0);
         color: rgb(255, 255, 255);
-        padding: 10px 24px;
+        padding: 5px 20px;
         text-align: center;
         text-decoration: none;
         display: inline-block;
