--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       
 
         <div id="Projects" class="tabcontent">
-            <button class="TabButton" onclick="this.parentElement.style.display='none'">Close</button>
+            <button class="CloseButton" onclick="this.parentElement.style.display='none'">Close</button>
             <br><p2>
                 <br>a list off all my curent and past projects
                 <br>with links to a playlist with vieos about 
@@ -28,7 +28,7 @@
 
 
       <div id="peepee" class="tabcontent">
-        <button class="TabButton" onclick="this.parentElement.style.display='none'">Close</button>
+        <button class="CloseButton" onclick="this.parentElement.style.display='none'">Close</button>
         <br><p2>
             <br>For questions about my games or buissnes proposals 
             <br>you can Contact me at any of the folloing socials
@@ -41,7 +41,7 @@
 
 
       <div id="Pog" class="tabcontent">
-        <button class="TabButton" onclick="this.parentElement.style.display='none'">Close</button>
+        <button class="CloseButton" onclick="this.parentElement.style.display='none'">Close</button>
         <br><p2>
             <br>This is where i post devlogs and updates for my game
         </p2>
@@ -53,7 +53,7 @@
 
 
       <div id="Donate" class="tabcontent">
-        <button class="TabButton" onclick="this.parentElement.style.display='none'">Close</button>
+        <button class="CloseButton" onclick="this.parentElement.style.display='none'">Close</button>
         <br><p2>
             <br>you dont have but if you want to you can Donate
         </p2>
@@ -64,7 +64,7 @@
 
 
       <div id="Discord" class="tabcontent">
-        <button class="TabButton" onclick="this.parentElement.style.display='none'">Close</button>
+        <button class="CloseButton" onclick="this.parentElement.style.display='none'">Close</button>
         <br><p2>
             <br>join the discord to get more frequent 
             <br>updates on the game and get to hang
@@ -74,7 +74,7 @@
       </div>
 
       <div id="Perks" class="tabcontent">
-        <button class="TabButton" onclick="this.parentElement.style.display='none'">Close</button>
+        <button class="CloseButton" onclick="this.parentElement.style.display='none'">Close</button>
         <br><p2>
             <br>Perks you get for donating can include
             <br>.Donator only streams
@@ -90,6 +90,16 @@
 
 
     <style>
+    .CloseButton
+    {
+        float: left;
+        font-size: 20;
+        font-family: Monaco, "Courier New", monospace;
+        font-weight: bolder;
+        border: 2px solid rgb(0, 0, 0);
+        background-color: rgb(255, 0, 0);
+        color: rgb(255, 255, 255);
+    }
 
     .cimg
     {
