--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <h1 id="grad1">
             Rum N Rags Games
         </h1>
+        
+        <img src="Outlook.png" height="50" width="50">
 
         <div class="tab">
             <button class="tablinks" onclick="openTab(event, 'peepee')">Contact me</button>
