--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <br>For questions about my games or buissnes proposals 
             <br>you can Contact me at any of the folloing socials
         </p2>
-        <br><a href = "mailto: rumnragsgames@outlook.com" target="_blank"><img src="Outlook.png" height="50" width="50"></a><p1 class="invisp">...</p1><a href = "mailto: rumnragsgames@outlook.com" target="_blank"><img src="Twittericon.png" height="50" width="50"></a><p1 class="invisp">...</p1><a href = "mailto: rumnragsgames@outlook.com" target="_blank"><img src="Instagramicon.png" height="50" width="50"></a>
+        <br><a href = "mailto: rumnragsgames@outlook.com" target="_blank"><img src="Outlook.png" height="50" width="50"></a><p1 class="invisp">...</p1><a href = "https://twitter.com/RumNRags" target="_blank"><img src="Twittericon.png" height="50" width="50"></a><p1 class="invisp">...</p1><a href = "mailto: rumnragsgames@outlook.com" target="_blank"><img src="Instagramicon.png" height="50" width="50"></a>
       </div>
       
 
