--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <br>them
             </p2>
             <br><a href="https://www.youtube.com/playlist?list=PL9HJOxIBCojhXX-WJn3z2odbAK6o2A7t7" target="_blank"><img src="iftlh.png" class="cimg" width="50" height="50"><p1>In For The Long Haul</p1></a>
-            <br><a href="https://bigrig420.github.io/nots-and-crosses/" target="_blank"><img><p1>HTML nots and crosses game</p1></a>
+            <br><a href="https://bigrig420.github.io/nots-and-crosses/" target="_blank"><img src="nac.png" class="cimg" width="50" height="50"><p1>HTML nots and crosses</p1></a>
         </div>
 
 
@@ -76,6 +76,8 @@
         <br><a class="button" href="https://discord.gg/swycUzdd" target="_blank">Join the discord here</a>
       </div>
 
+
+      
       <div id="Perks" class="tabcontent">
         <button class="CloseButton" onclick="this.parentElement.style.display='none'">Close</button>
         <br><p2>
