--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                 <br>them
             </p2>
             <br><a href="https://www.youtube.com/playlist?list=PL9HJOxIBCojhXX-WJn3z2odbAK6o2A7t7" target="_blank"><img src="iftlh.png" class="cimg" width="50" height="50"><p1>In For The Long Haul</p1></a>
-            <br><a href="https://bigrig420.github.io/nots-and-crosses/" target="_blank"><img src="nac.png" class="cimg" width="50" height="50"><p1>HTML nots and crosses</p1></a>
         </div>
 
 
@@ -36,7 +35,7 @@
             <br>For questions about my games or buissnes proposals 
             <br>you can Contact me at any of the folloing socials
         </p2>
-        <br><a href = "mailto: rumnragsgames@outlook.com" target="_blank"><img src="Outlook.png" height="50" width="50"></a><p1 class="invisp">...</p1><a href = "https://twitter.com/RumNRags" target="_blank"><img src="Twittericon.png" height="50" width="50"></a><p1 class="invisp">...</p1><a href = "mailto: rumnragsgames@outlook.com" target="_blank"><img src="Instagramicon.png" height="50" width="50"></a>
+        <br><a href = "mailto: rumnragsgames@outlook.com" target="_blank"><img src="Outlook.png" height="50" width="50"></a><p1 class="invisp">...</p1><a href = "mailto: rumnragsgames@outlook.com" target="_blank"><img src="Twittericon.png" height="50" width="50"></a><p1 class="invisp">...</p1><a href = "https://www.instagram.com/rumnragsgames/" target="_blank"><img src="Instagramicon.png" height="50" width="50"></a>
       </div>
       
 
@@ -76,8 +75,6 @@
         <br><a class="button" href="https://discord.gg/swycUzdd" target="_blank">Join the discord here</a>
       </div>
 
-
-      
       <div id="Perks" class="tabcontent">
         <button class="CloseButton" onclick="this.parentElement.style.display='none'">Close</button>
         <br><p2>
