--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <br>them
             </p2>
             <br><a href="https://www.youtube.com/playlist?list=PL9HJOxIBCojhXX-WJn3z2odbAK6o2A7t7" target="_blank"><img src="iftlh.png" class="cimg" width="50" height="50"><p1>In For The Long Haul</p1></a>
-            <br><a href="https://bigrig420.github.io/nots-and-crosses/" target="_blank"><img src="NAC.png" class="cimg" width="50" height="50"><p1>In For The Long Haul</p1></a>
+            <br><a href="https://bigrig420.github.io/nots-and-crosses/" target="_blank"><img src="nac.png" class="cimg" width="50" height="50"><p1>In For The Long Haul</p1></a>
         </div>
 
 
