--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <br>them
             </p2>
             <br><a href="https://www.youtube.com/playlist?list=PL9HJOxIBCojhXX-WJn3z2odbAK6o2A7t7" target="_blank"><img src="iftlh.png" class="cimg" width="50" height="50"><p1>In For The Long Haul</p1></a>
-            <br><a href="https://bigrig420.github.io/nots-and-crosses/" target="_blank"><img src="nac.png" class="cimg" width="50" height="50"><p1>In For The Long Haul</p1></a>
+            <br><a href="https://bigrig420.github.io/nots-and-crosses/" target="_blank"><img src="nac.png" class="cimg" width="50" height="50"><p1>HTML Nots And Crosses Game</p1></a>
         </div>
 
 
@@ -218,7 +218,7 @@
 
     .tab button.active 
     {
-        color: rgb(151, 5, 5);
+        color: rgb(153, 2, 2);
     }
     
 
