--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
         </p2>
         </div>
 
+        <div>
+            <p1 class="invisp">
+                RNR Games rnr rumnrags
+                Rum N Rags Games
+                rum n rags games
+            </p1>
+        </div>
+
     </body>
 
 
@@ -113,7 +121,7 @@
 
     .invisp
     {
-        color: rgb(124, 124, 124);
+        color: transparent;
     }
 
     .body
