--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+        <meta name="description" content="Here is where you can find information about the company Rum and rags games there
+        are links to youtube videos with information for new content and also blog posts">
+    </head>
     <body class="Body">
 
         <h1 id="grad1">
