--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
     <head>
-        <meta name="description" content="Here is where you can find information about the company Rum and rags games there
-        are links to youtube videos with information for new content and also blog posts">
+        <meta name="description" content="Find Blog post and youtube videos about new content under the Rum N Rags Games company rnrgames">
     </head>
     <body class="Body">
 
