--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <head>
        <title>RNR-Games</title>
-       <link rel="icon" href="favicon.jpg" type="image/jpg">
+       <link rel="icon" href="favicon.jpg" type="image/jpg" class="cimg">
 
     </head>
     
