--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </h1>
     
         <div class="tab">
-            <a href="./ContactMe.html" class="tablinks">  Contact Me  </a>
+            <a href=".html/ContactMe.html" class="tablinks">  Contact Me  </a>
             <a href="./Donate.html" class="tablinks">  Donate  </a>
             <a href="./YoutubeDiscord.html" class="tablinks">  Discord and Youtube  </a>
             <a href="./Projects.html" class="tablinks">  Projects  </a>
