--- a/html/YoutubeDiscord.html
+++ b/html/YoutubeDiscord.html
@@ -5,7 +5,7 @@
 
     <body class="body">
 
-        <h1 id="grad1" ta>
+        <h1 id="grad1" >
             <a href="./index.html" id="grad1">Rum N Rags Games</a>
         </h1>
 
