--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     
     <body class="Body">
 
-        <h1 id="grad1" ta>
+        <h1 id="grad1" >
             Rum N Rags Games
         </h1>
     
