--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href=".html/ContactMe.html" class="tablinks">  Contact Me  </a>
             <a href="./Donate.html" class="tablinks">  Donate  </a>
             <a href="./YoutubeDiscord.html" class="tablinks">  Discord and Youtube  </a>
-            <a href="./Projects.html" class="tablinks">  Projects  </a>
+            <a href="./projects.html" class="tablinks">  Projects  </a>
         </div>
     
     </body>
