--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,7 @@
                 present projects
             </h2>  
             <br><a href="https://bigrig420.github.io/nots-and-crosses/" target="_blank"><img src="nac.png" class="cimg" width="50" height="50" alt="RNR-Games"><p1>HTML Nots And Crosses Game</p1></a>
+            <br><a href="https://bigrig420.itch.io/inforthelonghaul" target="_blank"><img src="iftlh.png" class="cimg" width="50" height="50" alt="RNR-Games"><p1>In For The Long Haul daownload</p1></a>
         </div>
        
 
