--- a/Donate.html
+++ b/Donate.html
@@ -14,7 +14,11 @@
                 Here you can donate to help with the development of my games
             </h2>  
 
-            <br><a class="button" href="" target="_blank">Donations not yet set up</a>
+            <form action="https://www.paypal.com/donate" method="post" target="_top">
+                <input type="hidden" name="hosted_button_id" value="5B8VHEXNYZHY8" />
+                <input type="image" src="https://www.paypalobjects.com/en_AU/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                <img alt="" border="0" src="https://www.paypal.com/en_AU/i/scr/pixel.gif" width="1" height="1" />
+            </form>
             <p2 class="text">
                 <br> Perks you get for donating include
                 <br>.Donator only streams
