--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </h1>
     
         <div class="tab">
-            <a href="./contactMe.html" class="tablinks">  Contact Me  </a>
+            <a href="./contactMe.html" class="tablinks">  Find Me  </a>
             <!-- <a href="./Donate.html" class="tablinks">  Donate  </a> -->
             <a href="./YoutubeDiscord.html" class="tablinks">  Discord and Youtube  </a>
             <a href="./projects.html" class="tablinks">  Projects  </a>
