--- a/contactMe.html
+++ b/contactMe.html
@@ -14,7 +14,7 @@
                 if you want to see what im up to you can follow me on any of 
                 these socials for updates on the game and devlog progress
             </h2>  
-            <br><a href = "mailto: rumnragsgames@outlook.com" target="_blank"><img src="Outlook.png" height="50" width="50" alt="RNR-Games"></a><p1 class="invisp">...</p1><a href = "mailto: rumnragsgames@outlook.com" target="_blank"><img src="Twittericon.png" height="50" width="50" alt="RNR-Games"></a><p1 class="invisp">...</p1><a href = "https://www.instagram.com/rumnragsgames/" target="_blank"><img src="Instagramicon.png" height="50" width="50" alt="RNR-Games"></a>
+            <br><a href = "mailto: rumnragsgames@outlook.com" target="_blank"><img src="Outlook.png" height="50" width="50" alt="RNR-Games"></a><p1 class="invisp">...</p1><a href = "mailto: rumnragsgames@outlook.com" target="_blank"><img src="Twittericon.png" height="50" width="50" alt="RNR-Games"></a><p1 class="invisp">...</p1><a href = "https://www.instagram.com/rumnragsgames/" target="_blank"><img src="Instagramicon.png" height="50" width="50" alt="RNR-Games"></a><a href = "https://www.twitch.tv/big_rig_420" target="_blank"><img src="" height="50" width="50" alt="RNR-Games"></a>
         </div>
        
 
